add --enable-preview compiler option to example plugin, adjust gitignore